Name:                   simplex
Version:                0.3
Description:            Simple Latex
License:                GPL-3
License-File:           LICENSE
Author:                 Julian Fleischer
Maintainer:             f.ju@fu-berlin.de
Build-Type:             Simple
Cabal-Version:          >= 1.2
Executable simplex
  Main-is:              simplex.hs
  Build-Depends:        base >= 4.0, process >= 1.0, filepath >= 1.0, directory >= 1.0,
                        split >= 0.2, regex-compat >= 0.95, mtl >= 2.0, old-time >= 1.0,
                        random >= 1.0

