Name:                   simplex
Version:                0.3
Description:            Simple Latex
License:                GPL-3
License-File:           LICENSE
Author:                 Julian Fleischer
Maintainer:             f.ju@fu-berlin.de
Build-Type:             Simple
Cabal-Version:          >= 1.2
Executable simplex
  Main-is:              simplex.hs
  Build-Depends:        base >= 4.0,
                        process >= 1.1,
                        filepath >= 1.3,
                        directory >= 1.1,
                        split >= 0.2.1.1,
                        regex-compat >= 0.95.1,
                        mtl >= 2.1.2,
                        old-time >= 1.1,
                        random >= 1.0.1.1


