Name:               simplex
Version:            0.3.2
Synopsis:           A simple markup language that translates to LaTeX
Description:        A simple markup language that translates to LaTeX
Category:           LaTeX
License:            GPL-3
License-File:       LICENSE
Author:             Julian Fleischer <julian.fleischer@fu-berlin.de>
Maintainer:         Julian Fleischer <julian.fleischer@fu-berlin.de>
Build-Type:         Simple
Cabal-Version:      >= 1.4

Executable simplex
    Hs-Source-Dirs:     src
    Main-is:            simplex.hs
    Build-Depends:      base >= 4.0 && < 5.0,
                        process,
                        filepath,
                        directory,
                        split >= 0.2.1.1,
                        regex-compat >= 0.95.1,
                        mtl >= 2.1.2,
                        old-time,
                        random


